[package]
name = "migrate"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "Database migrations written in Rust."
homepage = "https://github.com/cinnabaris/migrate"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.5"
clap = "2.31"
url = "1.7"
chrono = "0.4"
mysql = "12.3"

[dependencies.postgres]
version = "0.15"
features = ["with-chrono"]


[dependencies.rusqlite]
version = "0.13"
features = ["chrono"]
